tests/bad_reserved_name_const.stderr
tests/bad_reserved_name_const.hop:2:7: error: HOP2008: identifier prefix '__hop_' is reserved
tests/bad_reserved_name_const.hop:2:7: hint: HOP2008: rename symbol to avoid '__hop_' prefix
