tests/bad_reserved_name_const.hop
// Verifies bad reserved name const.
const __hop_bad i32
